--- a/src/@core/layouts/components/header/kepcoin/header-kepcoin.component.html
+++ b/src/@core/layouts/components/header/kepcoin/header-kepcoin.component.html
@@ -23,7 +23,7 @@
   <a
     class="text-fixed-white header-link-icon d-flex justify-content-center align-items-center gap-1"
     style="width: inherit"
-    routerLink="/kepcoin"
+    [routerLink]="Resources.Kepcoin"
     [ngbPopover]="popContent"
     triggers="mouseenter:mouseleave"
     [closeDelay]="1000"
