--- a/src/app/modules/problems/components/study-plan-card/study-plan-card.component.html
+++ b/src/app/modules/problems/components/study-plan-card/study-plan-card.component.html
@@ -1,4 +1,4 @@
-<a class="study-plan-{{ studyPlan.id }}" routerLink="/practice/problems/study-plan/{{ studyPlan.id }}">
+<a class="study-plan-{{ studyPlan.id }}" [routerLink]="Resources.StudyPlan | resourceById:studyPlan.id">
   <div class="card">
     <div class="card-header d-block">
       <div class="study-plan-title">
