--- a/src/app/shared/components/user-popover/user-avatar-popover/user-avatar-popover.component.html
+++ b/src/app/shared/components/user-popover/user-avatar-popover/user-avatar-popover.component.html
@@ -62,7 +62,7 @@
 </ng-template>
 
 <a
-  [routerLink]="['/users', 'user', username]"
+  [routerLink]="Resources.UserProfile | resourceByUsername:username"
 >
   <img
     [src]="avatar"
