--- a/src/app/modules/duels/ui/components/duels-list-section/duels-list-section.component.html
+++ b/src/app/modules/duels/ui/components/duels-list-section/duels-list-section.component.html
@@ -18,7 +18,7 @@
         <div class="col-12">
           <duels-list-card
             [duel]="duel"
-            [viewLink]="['/practice', 'duels', 'duel', duel.id]"
+            [viewLink]="Resources.Duel | resourceById:duel.id"
             [confirmAvailable]="isConfirmAvailable(duel)"
             [confirmDisabled]="isConfirmLoading(duel)"
             [confirmLoading]="isConfirmLoading(duel)"
