--- a/src/app/modules/duels/ui/pages/duels/duels.page.html
+++ b/src/app/modules/duels/ui/pages/duels/duels.page.html
@@ -5,7 +5,7 @@
         <a
           [ngClass.lt-md]="'btn-sm'"
           class="btn btn-primary-light"
-          [routerLink]="['/practice', 'duels', 'rating']"
+          [routerLink]="Resources.DuelsRating"
         >
           <kep-icon class="font-medium-1" name="ranking"></kep-icon>
           <span [ngClass.lt-md]="'d-none'">
