--- a/src/app/modules/hackathons/ui/components/hackathon-table/hackathon-table.component.html
+++ b/src/app/modules/hackathons/ui/components/hackathon-table/hackathon-table.component.html
@@ -53,7 +53,7 @@
             <div>
               <a
                 class="btn btn-primary btn-sm"
-                [routerLink]="['/competitions', 'hackathons', 'hackathon', hackathon.id, 'standings']">
+                [routerLink]="Resources.HackathonStandings | resourceById:hackathon.id">
                 {{ 'Hackathons.Standings' | translate }}
               </a>
               <br>
