--- a/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
@@ -29,7 +29,7 @@
   <div class="mt-2 col-lg-8 col-12 offset-lg-2 offset-0">
     <div class="row">
       <div class="col-12 col-md-6">
-        <a  class="card card-info" routerLink="/learn/blog/post/52">
+        <a  class="card card-info" [routerLink]="Resources.BlogPost | resourceById:52">
           <div class="card-header">
             <div class="card-title">
               {{ 'AboutProblems' | translate }}
@@ -42,7 +42,7 @@
       </div>
 
       <div class="col-12 col-md-6">
-        <a  class="card card-info" routerLink="/learn/blog/post/46">
+        <a  class="card card-info" [routerLink]="Resources.BlogPost | resourceById:46">
           <div class="card-header">
             <div class="card-title">
               {{ 'AboutVerdicts' | translate }}
