--- a/src/app/modules/users/ui/pages/user-profile/user-profile.component.html
+++ b/src/app/modules/users/ui/pages/user-profile/user-profile.component.html
@@ -67,7 +67,7 @@
               </ul>
 
               @if (currentUser?.username == user.username) {
-                <a routerLink="/settings" class="btn btn-primary"
+                <a [routerLink]="[Resources.Settings]" class="btn btn-primary"
                    rippleEffect>
                   <i data-feather="edit" class="d-block d-md-none"></i>
                   <span class="fw-medium d-none d-md-block">{{ 'Edit' | translate }}</span>
